--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -79,3 +79,46 @@ nav {
 .loginMain {
   margin: -50px 0 0;
 }
+
+.loginSideDiv {
+  background-color: #992F05;
+  height: 100vh;
+  width: 400px;
+  position: fixed;
+  right: 0;
+  box-shadow: 2px 0 25px black;
+}
+
+.loginSideContent {
+  border: 1px solid black;
+  position: absolute;
+  width: 75%;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 225px;
+}
+
+.loginSideChildren {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 75%;
+  border: 1px solid black;
+  text-align: center;
+}
+
+.loginSideText {
+  border: 1px solid black;
+  text-align: center;
+}
+
+.loginSideButtonContainer {
+  margin: 10px;
+}
+
+.loginSideButton {
+  margin-right: 10px;
+  margin-left: 10px;
+}
