--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -5,6 +5,57 @@ body {
   background-color: #252525;
 }
 
+.newtButton {
+  background-color: #992F05;
+  border: none;
+  color: white;
+  margin: 5px;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.newtButton:hover {
+  color: #992F05;
+  background-color: white;
+  box-shadow: 0 0 5px black;
+}
+
+.newtButton:focus {
+  color: #992F05;
+  background-color: #252525;
+}
+
+.newtButtonDark {
+  background-color: #252525;
+  border: none;
+  color: white;
+  margin: 5px;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.newtButtonDark:hover {
+  box-shadow: 0 0 5px black;
+}
+
+.newtButtonDark:focus {
+  background-color: black;
+}
+
+.newtTextInput {
+  margin: 4px;
+  padding: 8px;
+  border: none;
+}
+
+.newtTextInput:hover {
+  box-shadow: 0 0 5px black;
+}
+
 nav {
   position: fixed;
   top: 0;
@@ -37,6 +88,7 @@ nav {
   background-color: #FFFFFF;
   color: #992F05;
   cursor: pointer;
+  box-shadow: 0 0 5px black;
 }
 
 .navLogo {
@@ -60,9 +112,7 @@ nav {
 }
 
 .navUserPhoto:hover {
-  background-color: #FFFFFF;
-  padding: 2px;
-  right: 12px;
+  box-shadow: 0 0 5px black;
 }
 
 .mainContainer {
@@ -78,47 +128,56 @@ nav {
 
 .loginMain {
   margin: -50px 0 0;
+  height: 100vh;
+  background-image: linear-gradient(to bottom, #0c2104, #1c0f07);
+}
+
+.loginBackground {
+  background-image: linear-gradient(to bottom right, red, yellow);
 }
 
 .loginSideDiv {
   background-color: #992F05;
-  height: 100vh;
+  height: 400px;
   width: 400px;
   position: fixed;
-  right: 0;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
   box-shadow: 2px 0 25px black;
 }
 
 .loginSideContent {
-  border: 1px solid black;
   position: absolute;
   width: 75%;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 225px;
+  text-align: center;
 }
 
 .loginSideChildren {
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-  width: 75%;
-  border: 1px solid black;
-  text-align: center;
+
 }
 
-.loginSideText {
-  border: 1px solid black;
-  text-align: center;
+.loginLogo {
+  width: 40px;
+  height: 40px;
 }
 
-.loginSideButtonContainer {
-  margin: 10px;
+.loginLink {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 4px;
+  border-radius: 10px;
 }
 
-.loginSideButton {
-  margin-right: 10px;
-  margin-left: 10px;
+.loginLink:hover {
+  background-color: #FFFFFF;
+  color: #992F05;
+  cursor: pointer;
+  box-shadow: 0 0 5px black;
 }
