--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -56,6 +56,14 @@ body {
   box-shadow: 0 0 5px black;
 }
 
+.formWarningText {
+  position: absolute;
+  width: 250px;
+  bottom: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 nav {
   position: fixed;
   top: 0;
@@ -129,11 +137,10 @@ nav {
 .loginMain {
   margin: -50px 0 0;
   height: 100vh;
-  background-image: linear-gradient(to bottom, #0c2104, #1c0f07);
-}
-
-.loginBackground {
-  background-image: linear-gradient(to bottom right, red, yellow);
+  background-image: url("./images/North_America_Nebula_HaRGB_V3_high_res.png");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .loginSideDiv {
