--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -17,14 +17,12 @@ body {
 }
 
 .newtButton:hover {
-  color: #992F05;
-  background-color: white;
   box-shadow: 0 0 5px black;
 }
 
 .newtButton:focus {
   color: #992F05;
-  background-color: #252525;
+  background-color: white;
 }
 
 .newtButtonDark {
@@ -126,7 +124,7 @@ nav {
 .mainContainer {
   z-index: -1;
   width: 100%;
-  max-width: 1500px;
+  max-width: 1000px;
   background-color: #252525;
   position: absolute;
   left: 50%;
@@ -187,4 +185,76 @@ nav {
   color: #992F05;
   cursor: pointer;
   box-shadow: 0 0 5px black;
+}
+
+/* User Profile */
+
+.userProfileBanner {
+  position: fixed;
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
+  height: 15%;
+  border-bottom: 2px solid #505050;
+}
+
+.userProfilePhotoContainer {
+  flex: none;
+  height: 75%;
+  margin: 0 25px;
+}
+
+.userProfilePhoto {
+  border-radius: 50%;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+}
+
+.userProfileNameContainer {
+  flex: none;
+}
+
+.userProfileName {
+  font-size: 32px;
+}
+
+.userProfileFollowButton{
+  padding: 0 10px;
+  flex: none;
+}
+
+.userProfileContent {
+  height: 85%;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+}
+
+.userProfileInfoPanel {
+  width: 30%;
+  height: 500px;
+  position: absolute;
+  left: 0;
+  word-wrap: break-word;
+  line-height: 150%;
+}
+
+.userProfileInfo {
+  font-size: 18px;
+  margin-top: 10px;
+  padding: 15px;
+  width: 50%;
+  text-align: center;
+}
+
+.userProfileInfoRow {
+  height: 25px;
+}
+
+.userProfileConversationsPanel {
+  width: 69%;
+  height: 100%;
+  position: absolute;
+  right: 0;
 }
