--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -48,7 +48,7 @@ body {
   background-color: black;
 }
 
-.newtJoinButton {
+.newtBigButton {
   background-color: #992F05;
   font-size: 20px;
   border: none;
@@ -60,11 +60,11 @@ body {
   display: inline-block;
 }
 
-.newtJoinButton:hover {
+.newtBigButton:hover {
   box-shadow: 0 0 5px black;
 }
 
-.newtJoinButton:focus {
+.newtBigButton:focus {
   color: #992F05;
   background-color: white;
 }
@@ -300,11 +300,14 @@ nav {
 /* Conversation List */
 
 .conversationList {
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   height: 100%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .conversationTile {
@@ -312,31 +315,36 @@ nav {
   background-color: #303030;
   border: 1px solid #505050;
   width: 90%;
-  height: 140px;
+  min-height: 120px;
   margin: 7px 0;
   padding: 5px;
+  height: max-content;
   /*box-shadow: -2px 2px 5px black;*/
 }
 
 .conversationTileTitleBox {
-  position: absolute;
+  position: relative;
   margin-left: 30px;
+  margin-top: 15px;
+  margin-bottom: 45px;
   align-items: center;
   top: -5px;
   left: 0;
   max-width: 75%;
-  max-height: 90%;
+  word-wrap: anywhere;
 }
 
 .conversationTileTitle {
   font-size: 32px;
+  height: content-box;
+  display: inline;
 }
 
 .conversationTileTopics{
   position: absolute;
   bottom: 0;
   margin-left: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   display: inline-flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -361,7 +369,7 @@ nav {
   text-align: right;
 }
 
-.conversationTileJoinButton {
+.conversationTileButton {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -378,10 +386,14 @@ nav {
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-evenly;
-  position: fixed;
-  margin-top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
+  position: relative;
+  margin-top: 10px;
   height: 300px;
   width: 375px;
+}
+
+.createConversationPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
