--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -5,6 +5,11 @@ body {
   background-color: #282828;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent; /* make scrollbar transparent */
+}
+
 .emoji {
   display: inline;
 }
@@ -118,10 +123,10 @@ nav {
   font-weight: normal;
   font-size: 16px;
   color: #FFFFFF;
+  box-shadow: 0 0 2px black;
   text-decoration: none;
-  padding: 4px;
+  padding: 6px;
   border-radius: 10px;
-
 }
 
 .navLink:hover {
@@ -163,7 +168,7 @@ nav {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  min-height: 80%;
+  min-height: 90%;
 }
 
 .loginMain {
@@ -363,6 +368,7 @@ nav {
   position: absolute;
   right: 20px;
   width: 20%;
+  min-width: 175px;
   height: 90%;
   top: 50%;
   transform: translateY(-50%);
@@ -388,12 +394,93 @@ nav {
   justify-content: space-evenly;
   position: relative;
   margin-top: 10px;
-  height: 300px;
-  width: 375px;
+  height: 350px;
+  width: 400px;
+  background-color: #303030;
+  padding: 10px;
 }
 
 .createConversationPage {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.createConversationTextInput {
+  margin: 4px;
+  padding: 12px;
+  border: none;
+  font-size: 16px;
+}
+
+.createConversationTextInput:hover {
+  box-shadow: 0 0 5px black;
+}
+
+/* Messenger */
+
+.messenger {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
+
+.messengerBanner {
+  display: flex;
+  justify-content: center;
+  height: 160px;
+}
+
+.messageList {
+  overflow-y: scroll;
+  height: calc(100% - 60px - 150px);
+  border: 1px solid #505050;
+}
+
+.message {
+  margin: 5px;
+  background-color: #303030;
+  border: 1px solid #505050;
+}
+
+.messageInfo {
+  position: relative;
+  width: 100%;
+}
+
+.messageAuthor {
+  margin: 5px;
+  background-color: #282828;
+  border-radius: 5px;
+  padding: 0 5px;
+  width: fit-content;
+}
+
+.messageTime {
+  position: absolute;
+  font-size: 11px;
+  color: #BBBBBB;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-right: 5px;
+}
+
+.messageBody {
+  margin: 5px;
+  padding: 2px;
+}
+
+.createMessageForm {
+  display: inline-flex;
+  justify-content: flex-start;
+  align-items: center;
+  width : 100%;
+  height: 60px;
+}
+
+.messageInput {
+  resize: none;
+  flex: 1;
+  height: 50px;
 }
