--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -34,6 +34,7 @@ body {
   background-color: white;
 }
 
+/*noinspection CssUnusedSymbol*/
 .newtButtonDark {
   background-color: #282828;
   border: none;
@@ -45,14 +46,17 @@ body {
   display: inline-block;
 }
 
+/*noinspection CssUnusedSymbol*/
 .newtButtonDark:hover {
   box-shadow: 0 0 5px black;
 }
 
+/*noinspection CssUnusedSymbol*/
 .newtButtonDark:focus {
   background-color: black;
 }
 
+/*noinspection CssUnusedSymbol*/
 .newtBigButton {
   background-color: #992F05;
   font-size: 20px;
@@ -65,10 +69,12 @@ body {
   display: inline-block;
 }
 
+/*noinspection CssUnusedSymbol*/
 .newtBigButton:hover {
   box-shadow: 0 0 5px black;
 }
 
+/*noinspection CssUnusedSymbol*/
 .newtBigButton:focus {
   color: #992F05;
   background-color: white;
@@ -84,6 +90,7 @@ body {
   box-shadow: 0 0 5px black;
 }
 
+/*noinspection CssUnusedSymbol*/
 .formWarningText {
   position: absolute;
   width: 250px;
@@ -102,6 +109,7 @@ nav {
 
 }
 
+/*noinspection CssUnusedSymbol*/
 .leftNavLinks {
   position: absolute;
   top: 50%;
@@ -109,6 +117,7 @@ nav {
   transform: translateY(-50%);
 }
 
+/*noinspection CssUnusedSymbol*/
 .rightNavLinks {
   position: absolute;
   display: inline-flex;
@@ -117,6 +126,7 @@ nav {
   transform: translateY(-50%);
 }
 
+/*noinspection CssUnusedSymbol*/
 .navLink {
   margin: 10px;
   font-style: normal;
@@ -129,6 +139,7 @@ nav {
   border-radius: 10px;
 }
 
+/*noinspection CssUnusedSymbol*/
 .navLink:hover {
   background-color: #FFFFFF;
   color: #992F05;
@@ -136,6 +147,7 @@ nav {
   box-shadow: 0 0 5px black;
 }
 
+/*noinspection CssUnusedSymbol*/
 .navLogo {
   width: 40px;
   position: absolute;
@@ -145,6 +157,7 @@ nav {
   border-radius: 30%;
 }
 
+/*noinspection CssUnusedSymbol*/
 .navUserPhoto {
   width: 35px;
   height: 35px;
@@ -157,6 +170,7 @@ nav {
   margin-left: 20px;
 }
 
+/*noinspection CssUnusedSymbol*/
 .navUserPhoto:hover {
   box-shadow: 0 0 5px black;
 }
@@ -200,15 +214,18 @@ nav {
   text-align: center;
 }
 
+/*noinspection CssUnusedSymbol*/
 .loginSideChildren {
 
 }
 
+/*noinspection CssUnusedSymbol*/
 .loginLogo {
   width: 40px;
   height: 40px;
 }
 
+/*noinspection CssUnusedSymbol*/
 .loginLink {
   font-style: normal;
   font-weight: normal;
@@ -219,6 +236,7 @@ nav {
   border-radius: 10px;
 }
 
+/*noinspection CssUnusedSymbol*/
 .loginLink:hover {
   background-color: #FFFFFF;
   color: #992F05;
@@ -238,12 +256,14 @@ nav {
   border-bottom: 2px solid #505050;
 }
 
+/*noinspection CssUnusedSymbol*/
 .userProfilePhotoContainer {
   flex: none;
   height: 75%;
   margin: 0 25px;
 }
 
+/*noinspection CssUnusedSymbol*/
 .userProfilePhoto {
   border-radius: 50%;
   background-color: white;
@@ -259,6 +279,7 @@ nav {
   font-size: 32px;
 }
 
+/*noinspection CssUnusedSymbol*/
 .userProfileFollowButton{
   padding: 0 10px;
   flex: none;
@@ -271,6 +292,7 @@ nav {
   bottom: 0;
 }
 
+/*noinspection CssUnusedSymbol*/
 .userProfileInfoPanel {
   width: 30%;
   height: 500px;
@@ -280,6 +302,7 @@ nav {
   line-height: 150%;
 }
 
+/*noinspection CssUnusedSymbol*/
 .userProfileInfo {
   font-size: 18px;
   width: 50%;
@@ -295,6 +318,7 @@ nav {
   width: 90%;
 }
 
+/*noinspection CssUnusedSymbol*/
 .userProfileConversationsPanel {
   width: 69%;
   height: 100%;
@@ -425,6 +449,7 @@ nav {
   width: 100%;
 }
 
+/*noinspection CssUnusedSymbol*/
 .messengerBanner {
   display: flex;
   justify-content: center;
@@ -443,11 +468,13 @@ nav {
   border: 1px solid #505050;
 }
 
+/*noinspection CssUnusedSymbol*/
 .messageInfo {
   position: relative;
   width: 100%;
 }
 
+/*noinspection CssUnusedSymbol*/
 .messageAuthor {
   margin: 5px;
   background-color: #282828;
